Xfce v4.18: Fix odd gap between panel elements

--- a/gtk-3.0/apps/_xfce.scss
+++ b/gtk-3.0/apps/_xfce.scss
@@ -1,9 +1,14 @@
-.xfce4-panel.panel {
-    background-color: $panel_bg_color;
-    text-shadow: none;
-    -gtk-icon-shadow: none;
+.xfce4-panel {
 
-    button.flat { @extend %panelbutton; }
+    border-radius: 0;
+
+    &.panel {
+        background-color: $panel_bg_color;
+        text-shadow: none;
+        -gtk-icon-shadow: none;
+    
+        button.flat { @extend %panelbutton; }
+    }
   }
 
 #tasklist-button {
